# peliculas

./: .env  Cargo.toml  README.md  default.nix  docker-compose.yml
init/: 01.sql
nix/: sources.json
src/: main.rs
src/db/: mod.rs
src/db/crud/: mod.rs
src/db/crud/peliculas/: listar_peliculas.rs  mod.rs
src/db/entidades/: actores.rs  comentarios.rs  directores.rs  mod.rs  peliculas.rs  prelude.rs  usuarios.rs
src/routes/: mod.rs  routes_login.rs  routes_peliculas.rs
